<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtEczaneAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ornek_eczane_ad"
                android:textSize="20sp"
                android:layout_marginBottom="6dp"
                android:textStyle="" />

            <TextView
                android:id="@+id/txtEczaneAdres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/ornek_eczane_adres"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtEczaneTelefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/ornek_eczane_tel"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtAdresiKopyala"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:textColor="@color/primary"
                    android:text="@string/adresi_kopyala"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtHaritadaAc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:layout_weight="50"
                    android:gravity="end"
                    android:text="@string/haritada_goster"
                    android:textStyle="bold"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>